k8s/backend-deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: backend-deployment
  namespace: chatapp

spec:
  replicas: 3

  selector:
    matchLabels:
      app: backend   # ✅ FIXED

  template:
    metadata:
      labels:
        app: backend   # ✅ FIXED

    spec:
      containers:
      - name: chatapp-backend

        # ❌ latest → fixed
        image: iamsnyg/chatapp-backend:latest   # 🔥 Use version

        ports:
        - containerPort: 5001
