k8s/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: chatapp
  labels:
    app: frontend

spec:
  type: NodePort   # 🔥 THIS IS THE KEY FIX

  selector:
    app: frontend

  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30007   # optional but recommended
